# uavrp

./: ACO.cpp  ACO.hpp  CMakeLists.txt  Dockerfile  Makefile  README.md  alg_runner.py  build.sh  data.cpp  data.hpp  docker-compose.yml  greedy.cpp  greedy.h  helpers.cpp  helpers.h  main.cpp  main.i  requirements.txt
alg/: __init__.py  alg.py  knapsnack_alg.py  reader.py
algs/: __init__.py  aco.py  base.py  greedy.py  local.py
entities/: __init__.py  draw_entities.py  entities.py
greedy/: __init__.py  greedy.py
input/: README.md  input1.in  input2.in  input3.in  input4.in
manager/: path.py  requirements.txt  runner.py
manager/bind/: aco_wrap.c  aco_wrap.cpp  tsp_alg.py
manager/drawer/: graph.py
manager/input/: a280.in  berlin52.in  bier127.in  eil51.in  eil76.in
manager/reader/: __init__.py  reader.py
manager/solver/: base.py  greedy.py  greedy_2s.py  local.py
output/: b_should_be_easy.out  c_no_hurry.out  d_metropolis.out  e_high_bonus.out
reader/: __init__.py  reader.py
